--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "packageManager": "npm@10.8.1",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "npm vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
